# python-examples

example-code-2e/01-data-model/: frenchdeck.py
example-code-2e/14-inheritance/: diamond.py
fastapi-demo/: .pre-commit-config.yaml  pyproject.toml
fastapi-demo/app/: main.py
fastapi-demo/app/static/: swagger-dark.css
geminiapi/: main.py
icc/: README.md  contarvariance.py  covariance.py  employees.py
openai/: README.md  pyproject.toml
openai/aigenerate/: chatgpt.py  settings.py
openai/icc/: contarvariance.py  employees.py  invariance.py  pyproject.toml
