[tool.poetry]
name = "newproj"
version = "0.1.0"
description = ""
authors = ["razens <razens@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
pre-commit = "^3.8.0"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
