[tool.poetry]
name = "aigenerate"
version = "0.1.4"
description = ""
authors = ["razens <razens@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
stubs = "^1.0.0"
mypy = "^1.1.1"
types-requests = "^2.28.11.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aigenerate = "aigenerate.chatgpt:main"
